# rattlesnake

./: .gitignore  LICENSE  README.md  pyproject.toml  rattlesnake.py  rattlesnake_callback_version.py  requirements.txt  start.py
main/: playback.py
pyaudio_examples/: play_audio.py  record_audio.py
tools/: get_pyaudio_channels.py
