[tool.poetry]
name = "rattlesnake"
version = "0.1.0"
description = "A python application that does noise cancellation"
authors = ["loehnertz <help@jakob.codes>", "yingshaoxo <yingshaoxo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cycler = "^0.11.0"
matplotlib = "^3.6.2"
pyaudio = "^0.2.12"
wave = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
rattlesnake = "rattlesnake:live_mode" # You can call 'live_mode' in everywhere from your terminal in the poetry shell
rattlesnake_callback_version = "rattlesnake_callback_version:live_mode" 
